--- a/index.html
+++ b/index.html
@@ -4,15 +4,27 @@
         <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" 
-        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" 
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="style.css">
-        <title>My Project</title>
-
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />        <link rel="stylesheet" href="style.css"> -->
+        <title>Incrementing Counter</title>
+        <script src="https://kit.fontawesome.com/fbf7d69e53.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>Project Starter</h1>
-        <script src="script.js"></script>
+<div class="counter-container">
+    <i class="fa-brands fa-twitter"></i>
+    <div class="counter" data-target="12000">12000</div>
+    <span>Minutes on Twitter</span>
+</div> 
+<div class="counter-container">
+    <i class="fa-solid fa-podcast"></i>
+    <div class="counter" data-target="5000">5000</div>
+    <span>Minutes on YouTube</span>
+</div>        
+<div class="counter-container">
+    <i class="fa-brands fa-instagram"></i>
+    <div class="counter" data-target="1000">1000</div>
+    <span>Minutes on Instagram</span>
+</div>        
+
+<script src="script.js"></script>
     </body>
 </HTML>
