--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/fbf7d69e53.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="style.css">
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />        <link rel="stylesheet" href="style.css"> -->
         <title>Incrementing Counter</title>
-        <script src="https://kit.fontawesome.com/fbf7d69e53.js" crossorigin="anonymous"></script>
     </head>
     <body>
 <div class="counter-container">
@@ -17,7 +18,7 @@
 <div class="counter-container">
     <i class="fa-solid fa-podcast"></i>
     <div class="counter" data-target="5000">5000</div>
-    <span>Minutes on YouTube</span>
+    <span>Minutes on Podcasts</span>
 </div>        
 <div class="counter-container">
     <i class="fa-brands fa-instagram"></i>
