--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <body>
 <div class="counter-container">
     <i class="fa-brands fa-twitter"></i>
-    <div class="counter" data-target="12000">12000</div>
-    <span>Minutes on Twitter</span>
+    <div class="counter" data-target="12000"></div>
+    <span>Minutes spent on Twitter</span>
 </div> 
 <div class="counter-container">
     <i class="fa-solid fa-podcast"></i>
-    <div class="counter" data-target="5000">5000</div>
-    <span>Minutes on Podcasts</span>
+    <div class="counter" data-target="5500"></div>
+    <span>Minutes spent on Podcasts</span>
 </div>        
 <div class="counter-container">
     <i class="fa-brands fa-instagram"></i>
-    <div class="counter" data-target="1000">1000</div>
-    <span>Minutes on Instagram</span>
+    <div class="counter" data-target="1132"></div>
+    <span>Minutes spent on Instagram</span>
 </div>        
 
 <script src="script.js"></script>
